--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
     <div class="row pt-4 container-fluid ml-0 project-bg">
 
 
-        <div class="col-12 text-center pt-5">
-            <h1>Past Projects</h1>
+        <div class="col-12 text-center py-5">
+            <h1>Portfolio</h1>
             <!-- <h5>Below are examples of websites that I've made for past clients.</h5> -->
             <br />
 
@@ -129,7 +129,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12 col-6-md mx-auto">
-                            <div class="card project-card mb-2">
+                            <div class="card project-card mt-2">
                                 <a href="https://jasonsmacias.github.io/Central-Jersey-Sci-Fi-Fantasy-Book-and-Movie-Club/"
                                     target="_blank"><img class="card-img-top"
                                         src="./assets/images/BookClubPic.PNG" alt="CNJ SF BMC Website" /></a>
@@ -164,14 +164,14 @@
 
 
 
-    <div class="text-center">
+    <!-- <div class="text-center">
         <br /><br />
         
         <br /><br /><br />
-    </div>
+    </div> -->
 
     <div class="contact-me-div text-center">
-        <h1 id="ContactMe" class="mt-5">Contact Me</h1>
+        <h1 id="ContactMe" class="pt-5">Contact Me</h1>
 
         <a href="mailto:mesibovjordan@gmail.com?Subject=Getting%20In%20Touch" target="_top">
             <button type="button" class="btn btn-outline-dark enter-button mt-4 text-center" id="email-button"
@@ -180,7 +180,7 @@
             </button>
         </a>
         <br /><br />
-        <p>(mesibovjordan@gmail.com)</p>
+        <p>mesibovjordan@gmail.com</p>
 
         <div class="modal fade text-light" id="exampleModal" tabindex="-1" role="dialog"
             aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -211,11 +211,11 @@
         <br /><br />
         <p id="phone-number">Phone: 908-616-1431</p>
     </div>
-    <div class="text-center">
+    <!-- <div class="text-center">
         <br /><br /><br />
         
         <br /><br /><br />
-    </div>
+    </div> -->
 
 
 
