--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <!-- This div will contain the background image and everything else will appear on top of it -->
-    <div class="bg container-fluid">
+    <div class="bg container-fluid" id="tiptop">
         <!-- This div will be what a viewer will see upon page load. It will say my name and full stack web dev, and have a button that says "enter" that will scroll the viewer down to the about-me div -->
         <div id="welcome" class="container-fluid">
             <h1>Jordan Mesibov</h1>
@@ -265,7 +265,7 @@
 
 
     <div class="footer text-center py-3">
-        <a href="#welcome">
+        <a href="#tiptop">
             <button type="button" class="btn btn-lg text-light btn-outline-light enter-button">
                 Scroll Up
             </button>
