--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="col-12">
 
                 <div class="text-center">
-                    
+                    <hr>
                 </div>
             </div>
         </div>
@@ -132,7 +132,7 @@
 
 
         <div class="col-12 text-center pt-2 pb-5">
-            <h1>Portfolio</h1>
+            <h1 class="big-text">Portfolio</h1>
             <!-- <h5>Below are examples of websites that I've made for past clients.</h5> -->
             <br />
         </div>
@@ -140,7 +140,7 @@
         <div class="container-fluid projects">
             <div class="row">
                 <div class="col-12 col-sm-6 mx-auto px-0">
-                    <div class="card project-card my-2 text-center site-pic">
+                    <div class="card project-card my-2 text-center site-pic shadow-lg">
                         <a href="http://radburnliquors.com" target="_blank"><img class="card-img-top"
                                 src="./assets/images/RadburnHomepagePic.PNG" alt="Radburn Liquors Website" /></a>
                         <div class="card-body">
@@ -161,7 +161,7 @@
                 </div>
 
                 <div class="col-12 col-sm-6 mx-auto px-0">
-                    <div class="card project-card mt-2 text-center site-pic">
+                    <div class="card project-card mt-2 text-center site-pic shadow-lg">
                         <a href="https://jasonsmacias.github.io/Central-Jersey-Sci-Fi-Fantasy-Book-and-Movie-Club/"
                             target="_blank"><img class="card-img-top" src="./assets/images/BookClubPic.PNG"
                                 alt="CNJ SF BMC Website" /></a>
@@ -213,7 +213,7 @@
     </div> -->
 
     <div class="contact-me-div text-center">
-        <h1 id="ContactMe" class="pt-3 pb-2">Contact Me</h1>
+        <h1 id="ContactMe" class="pt-3 pb-2 big-text">Contact Me</h1>
 
         <a href="mailto:mesibovjordan@gmail.com?Subject=Getting%20In%20Touch" target="_top">
             <button type="button" class="btn btn-outline-dark enter-button mt-4 text-center" id="email-button"
