--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div id="welcome" class="container-fluid">
             <h1>Jordan Mesibov</h1>
             <h3 id="job-title">Full stack web developer</h3>
-            <a href="#about-me">
+            <a href="#hello">
                 <button type="button" class="btn btn-lg text-light btn-outline-light enter-button">
                     Enter
                 </button>
@@ -32,10 +32,11 @@
     </div>
 
     <div class="container-fluid buffer">
-        <div class="row py-5">
+        <div class="row pt-5 py-4">
             <div class="col-12">
 
                 <div class="text-center">
+                    <br id="hello">
                     <hr>
                 </div>
             </div>
@@ -115,6 +116,17 @@
 
     </div>
 
+    <!-- <div class="container-fluid buffer">
+        <div class="row pt-2">
+            <div class="col-12">
+
+                <div class="text-center">
+                    <hr>
+                </div>
+            </div>
+        </div>
+    </div> -->
+
 
 
 
@@ -128,6 +140,17 @@
         </div>
         <div class="col-4 text-center py-5">
             <!-- <i class="fas fa-angle-double-down fa-5x"></i> -->
+        </div>
+
+        <div class="container-fluid buffer">
+            <div class="row py-2">
+                <div class="col-12">
+
+                    <div class="text-center">
+                        <hr>
+                    </div>
+                </div>
+            </div>
         </div>
 
 
@@ -153,7 +176,7 @@
                                 mobile-first approach to design.
                             </p>
                             <br><br><br>
-                            <button type="button" class="btn btn-outline-dark enter-button">
+                            <button type="button" class="btn btn-outline-dark">
                                 <a href="http://radburnliquors.com" target="_blank">Visit Site</a>
                             </button>
                         </div>
@@ -179,7 +202,7 @@
                                     request, this site is only designed for larger screens such as
                                     laptops.</i>
                             </p>
-                            <button type="button" class="btn btn-outline-dark enter-button">
+                            <button type="button" class="btn btn-outline-dark">
                                 <a href="https://jasonsmacias.github.io/Central-Jersey-Sci-Fi-Fantasy-Book-and-Movie-Club/"
                                     target="_blank">Visit Site</a>
                             </button>
@@ -187,16 +210,27 @@
                     </div>
                 </div>
 
+                <div class="container-fluid buffer">
+                        <div class="row pt-5">
+                            <div class="col-12">
+                
+                                <div class="text-center">
+                                    <hr>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
 
                 <div class="col-4 text-center py-5">
-                        <!-- <i class="fas fa-angle-double-down fa-5x"></i> -->
-                    </div>
-                    <div class="col-4 text-center py-5">
-                        <i class="fas fa-angle-double-down fa-5x"></i>
-                    </div>
-                    <div class="col-4 text-center py-5">
-                        <!-- <i class="fas fa-angle-double-down fa-5x"></i> -->
-                    </div>
+                    <!-- <i class="fas fa-angle-double-down fa-5x"></i> -->
+                </div>
+                <div class="col-4 text-center py-5">
+                    <i class="fas fa-angle-double-down fa-5x"></i>
+                </div>
+                <div class="col-4 text-center py-5">
+                    <!-- <i class="fas fa-angle-double-down fa-5x"></i> -->
+                </div>
 
             </div>
         </div>
@@ -216,7 +250,7 @@
         <h1 id="ContactMe" class="pt-3 pb-2 big-text">Contact Me</h1>
 
         <a href="mailto:mesibovjordan@gmail.com?Subject=Getting%20In%20Touch" target="_top">
-            <button type="button" class="btn btn-outline-dark enter-button mt-4 text-center" id="email-button"
+            <button type="button" class="btn btn-outline-dark mt-4 text-center" id="email-button"
                 onclick="setTimeout(emailFunction, 1)" data-toggle="modal" data-target="#exampleModal">
                 Send me an email
             </button>
@@ -261,13 +295,22 @@
 
 
 
+    <div class="container-fluid buffer">
+        <div class="row pt-2">
+            <div class="col-12">
 
+                <div class="text-center">
+
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <div class="footer text-center py-3">
         <a href="#tiptop">
-            <button type="button" class="btn btn-lg text-light btn-outline-light enter-button">
-                Scroll Up
+            <button type="button" class="btn btn-lg btn-outline-light">
+                <h3>go up</h3>
             </button>
         </a>
     </div>
