--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         <br /><br />
         <p>mesibovjordan@gmail.com</p>
 
-        <div class="modal fade text-light" id="exampleModal" tabindex="-1" role="dialog"
+        <div class="modal fade text-dark" id="exampleModal" tabindex="-1" role="dialog"
             aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
@@ -277,7 +277,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-outline-light" data-dismiss="modal">
+                        <button type="button" class="btn btn-outline-dark" data-dismiss="modal">
                             Dismiss
                         </button>
                     </div>
