--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="col-12 col-md-6 text-center pt-1 pb-4 about-text">
                 <!-- <br><br><br><br><br><br><h1>PUT A PICTURE OF ME HERE (and remove all the filler br tags). IT WILL ALSO HELP TAKE UP THE STUPID DEAD SPACE UNDER THE ABOUT ME SECTION</h1><br><br><br><br><br><br><br><br><br><br> -->
 
-                <img id="profile-pic" src="./assets/images/profile-pic-demo-day.JPG" alt="Jordan Mesibov" />
+                <img id="profile-pic" src="./assets/images/IMG-1887 (3).jpg" alt="Jordan Mesibov" />
                 
             </div>
             <br />
